<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/congratulation_text_view"
        style="@style/BaseViewStyle"
        android:text="@string/congratulation"
        android:textAppearance="@style/HeaderMessageView"
        app:layout_constraintBottom_toTopOf="@+id/message_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/message_text_view"
        style="@style/BaseViewStyle"
        android:text="@string/winner_message"
        android:textAppearance="@style/MainMessageView"
        app:layout_constraintBottom_toTopOf="@+id/winner_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/congratulation_text_view" />

    <TextView
        android:id="@+id/winner_text_view"
        style="@style/BaseViewStyle"
        android:text="@string/winner_message_name1"
        android:textAppearance="@style/PlayerTextViewPopUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/message_text_view" />

    <Button
        android:id="@+id/button_start_again"
        style="@style/ActionButtonStyle"
        android:layout_marginTop="@dimen/margin_small"
        android:onClick="backToMainActivity"
        android:text="@string/reset_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winner_text_view"
        app:layout_constraintVertical_bias="0.0" />


</android.support.constraint.ConstraintLayout>